--- a/content/forms/login.html
+++ b/content/forms/login.html
@@ -1,86 +1,41 @@
+<form class="login-form" action="#" method="post">
 
-<!-- <div class="login-box-container">
+    <h1 class="login-text">Login to your account</h1>
 
-    <div class="login-box"> -->
+    <div class="login-field">
 
-        <form class="login-form" action="#" method="post">
-
-            <h1 class="login-text">Login to your account</h1>
-
-            <div class="login-field">
-
-                <div class="login-subfield username">
-                    <label for="username">Username or Email</label>
-                    <input class="text-input bg-img" id="username" type="text" name="username" placeholder="Username or Email">
-                </div>
-
-                <div class="login-subfield password">
-                    <label for="password">Password</label>
-                    <input class="text-input bg-img" id="password" type="password" name="password" placeholder="Password">
-                </div>
-
-                <div class="rememberme">
-                    <input type='checkbox' name='remember-me' id='rememberme'>
-                    <label for='rememberme'>Remember me</label>
-                </div>
-
-                <div class="login-buttons">
-                    <button class="button" type="submit" name="submit" value="Sign In">Sign In</button>
-                </div>
-
-                <div class="comp">
-                    <span class="comp-text forgot">
-                        <a href="#">Forgot your password?</a>
-                    </span>
-                    <span class="comp-text signup">
-                        <a href="/user/register">Sign Up</a>
-                    </span>
-                </div>
-
-            </div>
-
-        </form>
-
-    <!-- </div> -->
-
-    <div class="attribution">
-        <a href="https://icons8.com" target="_blank">Icons by Icons8</a>
-    </div>
-
-<!-- </div> -->
-
-
-
-
-
-    <!-- <form class="login-form" action="" method="post">
-
-        <h1 class="login-text">Login</h1>
-
-        <div class="formfield">
-
-            <div class="form-subfield username">
-                <label for="username">Username or Email</label><br>
-                <input class="text-input" id="username" type="text" name="username"><br>
-            </div>
-
-            <div class="form-subfield password">
-                <label for="password">Password</label><br>
-                <input class="text-input" id="password" type="password" name="password"><br>
-            </div>
-
-            <div class="form-buttons">
-                <input class="button" type="submit" name="submit" value="Entrar">
-                <span>ou</span>
-                <input class="button" type="button" name="register" value="Registrar">
-            </div>
-
+        <div class="login-subfield username">
+            <label for="username">Username or Email</label>
+            <input class="text-input bg-img" id="username" type="text" name="username" placeholder="Username or Email">
         </div>
 
-    </form> -->
+        <div class="login-subfield password">
+            <label for="password">Password</label>
+            <input class="text-input bg-img" id="password" type="password" name="password" placeholder="Password">
+        </div>
 
-<!-- <script>
-    document.querySelector("input[name='register']").addEventListener("click", function(){
-        location.assign("/user/register");
-    });
-</script> -->
+        <div class="rememberme">
+            <input type='checkbox' name='remember-me' id='rememberme'>
+            <label for='rememberme'>Remember me</label>
+        </div>
+
+        <div class="login-buttons">
+            <button class="button" type="submit" name="submit" value="Sign In">Sign In</button>
+        </div>
+
+        <div class="comp">
+            <span class="comp-text forgot">
+                <a href="/user/resetPassword/confirmEmail">Forgot your password?</a>
+            </span>
+            <span class="comp-text signup">
+                <a href="/register">Sign Up</a>
+            </span>
+        </div>
+
+    </div>
+
+</form>
+
+<div class="attribution">
+    <a href="https://icons8.com" target="_blank">Icons by Icons8</a>
+</div>
